Miscellaneous Tooltip Bugfixes (#2477)
* :lipstick: typos & docs

* :lipstick: (tooltip): outline min label

- make sure the min value is still legible when the sparkline overlaps it

* :bug: (linechart): fix duplicate entries for projected data

- when the projected values series extends into the past and future it overlaps the full range of the known data, leading to multiple series with the same name being displayed at once in the tooltip
- the new logic pre-selects whether to use the projection vs non-projection series (or will omit the entity altogether if the target time is outside of the series's time range)

* :bug: (tooltip): only dim trailing parentheticals

- previous regex would greedily match "text with (initial) followed by (subsequent parentheticals)"
- NB: doesn't handle nested parens like "Nuclear (Sovacool et al. (2016))"

* :sparkles: (scatterplot): show delta for single-indicator charts

- if the same variable in different years is used for x & y, display the change over time in the tooltip rather than showing each value separately (along with spurious time-tolerance notices)

* :sparkles: (tooltip): add `striped` flag to table rows

* :sparkles: (line): use striped swatches for projected data

* :lipstick: (tooltip): only dim final parenthetical

* :sparkles: (tooltip): add projected-data mode to footer

- also dropped the 'prompt' field for the Click to View message that's no longer necessary

* :lipstick: (tooltip): remove unused regex capture

* :lipstick: (line): Use simpler projected data label (for now)

* :bug: use `excludeNullish` rather than `compact`

- stop erroneously discarding zeros

* :hammer: (scatterplot): simplify single-indicator date range handling

--- a/packages/@ourworldindata/grapher/src/tooltip/Tooltip.scss
+++ b/packages/@ourworldindata/grapher/src/tooltip/Tooltip.scss
@@ -21,6 +21,16 @@
     font-family: $sans-serif-font-stack;
     font-size: 16px;
 
+    @mixin diagonal-background($background, $color) {
+        background: repeating-linear-gradient(
+            -45deg,
+            $background,
+            $background 16%,
+            $color 16%,
+            $color 25%
+        );
+    }
+
     .frontmatter {
         background: $background-fill;
         color: black;
@@ -181,13 +191,14 @@
                     display: inline-block;
                     margin-right: 0.3em;
                     text-align: left;
+                    position: relative;
                 }
             }
 
             td.series-name {
                 padding-right: 0.9em;
                 line-height: 16px;
-
+                width: 100%;
                 .parenthetical {
                     color: $grey;
                 }
@@ -287,17 +298,19 @@
                     display: none;
                 }
             }
-        }
 
-        // the 'click to select' prompt in MapTooltip
-        .callout {
-            margin: 0.28em;
-            text-align: center;
-            font-weight: $bold;
-            font-size: 12px;
-            font-style: italic;
-            letter-spacing: 0.01em;
-            color: $grey;
+            // overlay a diagonal line pattern on striped swatches
+            tr.striped .series-color .swatch::before {
+                content: " ";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                @include diagonal-background(transparent, white);
+            }
+
+            tr.striped.blurred .series-color .swatch::before {
+                @include diagonal-background($grey, white);
+            }
         }
 
         .hoverIndicator circle {
@@ -306,7 +319,7 @@
         }
     }
 
-    // tolerance captions w/ circle-i icon
+    // tolerance captions w/ circle-i icon or projection warning with striped swatch
     .endmatter {
         position: relative;
         color: $grey;
@@ -314,9 +327,15 @@
         border-radius: 0 0 3px 3px;
         border-top: 1px solid $light-grey;
 
-        svg {
+        .icon {
             position: absolute;
             width: 12px;
+
+            &.stripes {
+                content: " ";
+                height: 12px;
+                @include diagonal-background($grey, white);
+            }
         }
 
         p {
@@ -324,26 +343,21 @@
             letter-spacing: 0.01em;
             line-height: 15px;
             margin: 0;
-            padding-left: 19px;
             max-width: 260px;
+        }
 
-            &.prompt {
-                padding-left: 0;
-                text-align: center;
-                font-weight: $bold;
-                font-size: 12px;
-                font-style: italic;
-                letter-spacing: 0.01em;
-                color: $grey;
+        // add boilerplate around time value for tolerance notices
+        p.notice {
+            &::before {
+                content: "Data not available for ";
+            }
+            &::after {
+                content: ". Showing closest available data point instead";
             }
         }
 
-        p.time-notice + p.prompt {
-            border-top: 2px solid $light-grey;
-            padding-top: 0.3em;
-            margin-top: 0.35em;
-            margin-left: 19px;
-            text-align: left;
+        .icon ~ p {
+            padding-left: 19px;
         }
     }
 
